css: fix css declaration for navigator sidebar icon
The prevoius declaration wasn't adding width and height to impress
properties were making the navigator icon not visible in light mode

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -321,7 +321,7 @@
 	background-position: right;
 	background-repeat: no-repeat;
 }
-.unospan-optionstoolboxdown .unobutton > img {
+#optionstoolboxdown .unotoolbutton .unobutton > img {
 	width: var(--btn-img-size);
 	height: var(--btn-img-size);
 }
